Fix small layout bug. Fix Ie8/9 toolbar focus bug. Fix bug where b/i/u tags are not activated after pressing. Checks now always the state (checkState()) after pressing any key, of course with a delay()&clearTimout

--- a/Assets/MooEditable/MooEditable.css
+++ b/Assets/MooEditable/MooEditable.css
@@ -231,17 +231,23 @@ a.mooeditable-ui-panesbox-button,
 a.mooeditable-ui-panesbox-button:link {
     text-decoration: none;
     color: #444;
+    display: block;
+    float: left;
     border: 1px solid #aaa;
     border-bottom: 0px;
+    
     font-size: 12px;
     cursor: pointer;
-    line-height: 19px;
+    line-height: 18px;
+    
     margin-right: 3px;
-    padding: 3px 7px;
+    padding: 0px 7px;
+    
     -moz-border-radius-topleft: 4px;
     -moz-border-radius-topright: 4px;
     -webkit-border-top-left-radius: 4px;
     -webkit-border-top-right-radius: 4px;
+    outline: 0;
     
     background-image: -webkit-gradient(linear, left top, left bottom, #f7f7f7, to(#ddd)); 
     background-image: -webkit-linear-gradient(top, #f7f7f7, #ddd); 
@@ -260,7 +266,7 @@ a.mooeditable-ui-panesbox-button-active:link {
     background-color: #f7f7f7;
     background-image: none;
     position: relative;
-    padding-bottom: 4px;
+    padding-bottom: 1px;
 }
 
 .mooeditable-dialog-actions {
